# VideoSAVi

./: README.md  eval.sh  infer.py  pyproject.toml  qwen_inference.py  run_inference.sh
